--- a/.github/actions/on_host_test/action.yaml
+++ b/.github/actions/on_host_test/action.yaml
@@ -9,3 +9,10 @@ runs:
     - name: Test
       shell: bash
       run: echo "Test"
+
+    - name: Archive unit test report
+      uses: actions/upload-artifact@v3
+      if: always()
+      with:
+        name: unit-test-results
+        path: unit-test-results/
