--- a/.github/workflows/linux.yaml
+++ b/.github/workflows/linux.yaml
@@ -2,34 +2,40 @@ name: linux
 
 on:
   pull_request:
-    types: [ready_for_review, opened, reopened, synchronize, labeled]
+    types: [opened, reopened, synchronize, labeled]
     branches:
       - main
+      - experimental/*
       - feature/*
   push:
     branches:
       - main
+      - experimental/*
       - feature/*
+  workflow_dispatch:
+    inputs:
+      nightly:
+        description: 'Nightly workflow.'
+        required: true
+        type: boolean
+        default: false
 
 jobs:
-  linux-x64:
+  # This is default Chromium build config
+  chromium_linux-x64:
+    uses: ./.github/workflows/main.yaml
+    permissions:
+      packages: write
+      pull-requests: write
+    with:
+      platform: chromium_linux
+      nightly: ${{ github.event.inputs.nightly }}
+  # This is default Cobalt build config
+  linux:
     uses: ./.github/workflows/main.yaml
     permissions:
       packages: write
       pull-requests: write
     with:
       platform: linux
-  linux-clang-3-9:
-    uses: ./.github/workflows/main.yaml
-    permissions:
-      packages: write
-      pull-requests: write
-    with:
-      platform: linux-clang-3-9
-  linux-gcc-6-3:
-    uses: ./.github/workflows/main.yaml
-    permissions:
-      packages: write
-      pull-requests: write
-    with:
-      platform: linux-gcc-6-3
+      nightly: ${{ github.event.inputs.nightly }}
