--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,7 +15,7 @@ on:
         type: string
         default: 'false'
     secrets:
-      datadog_api_key:
+      my_api_key:
         required: false
 
 concurrency:
