Make jq output minified

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -148,7 +148,7 @@ jobs:
         if: always()
         run: |
           set -x
-          echo "test_targets=$(ls test_logs/*log.txt | jq -R . | jq -s .)" >> $GITHUB_OUTPUT
+          echo "test_targets=$(ls test_logs/*log.txt | jq -R . | jq -sc .)" >> $GITHUB_OUTPUT
         shell: bash
     outputs:
       test_targets: ${{ steps.set-output.outputs.test_targets }}
