--- a/.github/actions/process_test_results/action.yaml
+++ b/.github/actions/process_test_results/action.yaml
@@ -9,7 +9,7 @@ runs:
       if: always()
       run: |
         set -x
-        echo "test_targets=$(ls results/*log.txt)" >> $GITHUB_OUTPUT
+        echo "test_targets=$(ls results/*log.txt | jq -R . | jq -sc .)" >> $GITHUB_OUTPUT
       shell: bash
 
 outputs:
