Use matrix.test_targets instead of matrix.name

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -164,5 +164,5 @@ jobs:
     steps:
       - name: Print logs
         run: |
-          cat ${{ matrix.name }}
+          cat ${{ matrix.test_targets }}
         shell: bash
