--- a/.github/workflows/deflake_tests.yaml
+++ b/.github/workflows/deflake_tests.yaml
@@ -2,50 +2,38 @@ name: Deflake Tests
 description: Re-triggers test jobs if they failed.
 on:
   workflow_run:
-    workflows: [linux]
+    workflows: [android, raspi-2-modular, evergreen, linux]
     types:
       - completed
+permissions: {}
 
 jobs:
   rerun-failing-jobs:
     runs-on: ubuntu-latest
-    if: github.event.workflow_run.conclusion == 'failure' || github.event.workflow_run.conclusion == 'cancelled'
+    if: github.event.workflow_run.conclusion == 'failure'
     permissions:
       actions: write
       checks: read
+      contents: read
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Check Retry Count
-        id: retry_check
+      - name: Rerun Failing Tests
         env:
-          DEFLAKE_ATTEMPTS: 3
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          WORKFLOW: ${{ github.event.workflow_run.id }}
-        shell: bash
-        run: |
-          set +x
-          # Attempt to access the last attempt of the workflow that triggereed this one.
-          if gh run view ${WORKFLOW} --attempt ${DEFLAKE_ATTEMPTS}; then
-            echo "continue=false" >> ${GITHUB_OUTPUT}
-          else
-            echo "continue=true" >> ${GITHUB_OUTPUT}
-          fi
-
-      - name: Rerun Failing Checks
-        if: steps.retry_check.outputs.continue == 'true'
-        env:
+          MAX_ATTEMPTS: 3
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPO: ${{ github.repository }}
           WORKFLOW: ${{ github.event.workflow_run.id }}
         shell: bash
         run: |
           set +x
+          if gh run view ${WORKFLOW} --attempt ${MAX_ATTEMPTS}; then
+            # The last attemp was successfully loaded. Our work is done.
+            exit 0
+          fi
+
           echo "Fetching failed '_tests' jobs for workflow run ${WORKFLOW}"
-          
+
           # Fetch failed jobs ending with _tests
-          failed_job_ids=$(gh run view "${WORKFLOW}" --json jobs --jq '.jobs[] | select(.conclusion=="failure" or .conclusion=="cancelled") | select(.name | endswith("_tests")) | .databaseId')
+          failed_job_ids=$(gh run view "${WORKFLOW}" --json jobs --jq '.jobs[] | select(.conclusion=="failure") | select(.name | contains("_tests")) | .databaseId')
 
           if [ -z "$failed_job_ids" ]; then
             echo "No failing '_tests' jobs found to rerun."
@@ -53,6 +41,6 @@ jobs:
           fi
 
           for job_id in $failed_job_ids; do
-            echo "Rerunning job ${job_id}"
+            echo "Rerunning job https://github.com/${REPO}/actions/runs/${WORKFLOW}/jobs/${job_id}"
             gh run rerun "${WORKFLOW}" --job "${job_id}" --repo "${REPO}"
           done
