--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -85,6 +85,18 @@ jobs:
         run: |
           docker_service=$(cat ${GITHUB_WORKSPACE}/.github/config/${{ inputs.platform }}.json | jq -r '.docker_service')
           echo "docker_service=${docker_service}" >> $GITHUB_ENV
+      - name: Set number of on-host unit test shards
+        id: set-gtest-shards
+        shell: bash
+        run: |
+          set -x
+          # Retrieve number of shards from config. If not specified, default to 1 shard with `echo 1`.
+          num_gtest_shards=$(cat ${GITHUB_WORKSPACE}/.github/config/${{ inputs.platform }}.json | jq -rc '.num_gtest_shards // 1' )
+          echo "num_gtest_shards=${num_gtest_shards}" >> $GITHUB_OUTPUT
+
+          # Create a zero-indexed list of shards for use by matrix, e.g. [0,1,2,3,4,5].
+          gtest_shards="[$(seq -s, 0 1 $((${num_gtest_shards} - 1)))]"
+          echo "gtest_shards=${gtest_shards}" >> $GITHUB_OUTPUT
     outputs:
       platforms: ${{ env.platforms }}
       targets: ${{ env.targets }}
@@ -92,6 +104,8 @@ jobs:
       docker_service: ${{ env.docker_service }}
       test_on_host: ${{ env.test_on_host }}
       test_on_device: ${{ env.test_on_device }}
+      gtest_shards: ${{ steps.set-gtest-shards.outputs.gtest_shards }}
+      num_gtest_shards: ${{ steps.set-gtest-shards.outputs.num_gtest_shards }}
 
   # # Runs builds.
   # build:
