--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -107,37 +107,37 @@ jobs:
       gtest_shards: ${{ steps.set-gtest-shards.outputs.gtest_shards }}
       num_gtest_shards: ${{ steps.set-gtest-shards.outputs.num_gtest_shards }}
 
-  # # Runs builds.
-  # build:
-  #   needs: [initialize]
-  #   permissions: {}
-  #   runs-on: ubuntu-latest
-  #   name: ${{ matrix.name }}_${{ matrix.config }}
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       platform: ${{ fromJson(needs.initialize.outputs.platforms) }}
-  #       include: ${{ fromJson(needs.initialize.outputs.includes) }}
-  #       config: [devel, debug, qa, gold]
-  #   env:
-  #     TEST_ARTIFACTS_KEY: ${{ matrix.platform }}_${{ matrix.name }}_test_artifacts
-  #     DEPOT_TOOLS_UPDATE: 0
-  #     DEPOT_TOOLS_REPORT_BUILD: 0
-  #     DEPOT_TOOLS_COLLECT_METRICS: 0
-  #     DEPOT_TOOLS_METRICS: 0
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v4
-  #       with:
-  #         path: src
-  #     - name: Build Cobalt
-  #       uses: ./src/.github/actions/build
-  #       with:
-  #         targets: ${{ needs.initialize.outputs.targets }}
-  #         test_artifacts_key: ${{ env.TEST_ARTIFACTS_KEY }}
-  #     - name: Upload On Device Test Artifacts
-  #       if: matrix.config == 'devel' && needs.initialize.outputs.test_on_device == 'true'
-  #       uses: ./src/.github/actions/upload_test_artifacts
+  # Runs builds.
+  build:
+    needs: [initialize]
+    permissions: {}
+    runs-on: ubuntu-latest
+    name: ${{ matrix.name }}_${{ matrix.config }}
+    strategy:
+      fail-fast: false
+      matrix:
+        platform: ${{ fromJson(needs.initialize.outputs.platforms) }}
+        include: ${{ fromJson(needs.initialize.outputs.includes) }}
+        config: [devel, debug, qa, gold]
+    env:
+      TEST_ARTIFACTS_KEY: ${{ matrix.platform }}_${{ matrix.name }}_test_artifacts
+      DEPOT_TOOLS_UPDATE: 0
+      DEPOT_TOOLS_REPORT_BUILD: 0
+      DEPOT_TOOLS_COLLECT_METRICS: 0
+      DEPOT_TOOLS_METRICS: 0
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          path: src
+      - name: Build Cobalt
+        uses: ./src/.github/actions/build
+        with:
+          targets: ${{ needs.initialize.outputs.targets }}
+          test_artifacts_key: ${{ env.TEST_ARTIFACTS_KEY }}
+      - name: Upload On Device Test Artifacts
+        if: matrix.config == 'devel' && needs.initialize.outputs.test_on_device == 'true'
+        uses: ./src/.github/actions/upload_test_artifacts
 
   test:
     needs: [initialize]
@@ -157,6 +157,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Run Tests with Filter
+        uses: ./.github/actions/run_tests
+        with:
+          test_targets: "base_unittests fake_unittests"
+          test_results_key: "${{ env.TEST_ARTIFACTS_KEY }}"
+          mock_rerun: "true"
+
       - name: Process Test Results
         id: process-test-results
         uses: ./.github/actions/process_test_results
@@ -180,5 +187,6 @@ jobs:
         uses: actions/checkout@v4
       - name: Print logs
         run: |
+          TODO:
           cat ${{ matrix.test_targets }}
         shell: bash
