Fix TODO comment in main.yaml

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -187,6 +187,6 @@ jobs:
         uses: actions/checkout@v4
       - name: Print logs
         run: |
-          TODO:
+          # TODO:
           cat ${{ matrix.test_targets }}
         shell: bash
