--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -242,14 +242,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: ci-essentials-${{ inputs.platform }}
-      - name: Build docker image
+      - name: Build docker image (Mock)
         id: build-docker-image
-        uses: ./.github/actions/docker
-        with:
-          docker_service: ${{ needs.initialize.outputs.docker_service }}
-          is_pr: ${{ (github.event_name == 'pull_request') }}
-          docker_content_sha: ${{ needs.initialize.outputs.docker_content_sha }}
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+        run: echo "docker_tag=mock-tag" >> $GITHUB_OUTPUT
     outputs:
       docker_tag: ${{ steps.build-docker-image.outputs.docker_tag }}
 
@@ -263,14 +258,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: ci-essentials-${{ inputs.platform }}
-      - name: Build docker image
+      - name: Build docker image (Mock)
         id: build-docker-image
-        uses: ./.github/actions/docker
-        with:
-          docker_service: unittest
-          is_pr: ${{ (github.event_name == 'pull_request') }}
-          docker_content_sha: ${{ needs.initialize.outputs.docker_content_sha }}
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+        run: echo "docker_tag=mock-tag" >> $GITHUB_OUTPUT
     outputs:
       docker_tag: ${{ steps.build-docker-image.outputs.docker_tag }}
 
@@ -284,14 +274,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: ci-essentials-${{ inputs.platform }}
-      - name: Build docker image
+      - name: Build docker image (Mock)
         id: build-docker-image
-        uses: ./.github/actions/docker
-        with:
-          docker_service: webtest
-          is_pr: ${{ (github.event_name == 'pull_request') }}
-          docker_content_sha: ${{ needs.initialize.outputs.docker_content_sha }}
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+        run: echo "docker_tag=mock-tag" >> $GITHUB_OUTPUT
     outputs:
       docker_tag: ${{ steps.build-docker-image.outputs.docker_tag }}
 
@@ -328,8 +313,8 @@ jobs:
           path: pre-run
           name: ci-essentials-${{ inputs.platform }}
 
-      - name: Prepare Workspace for Checkout
-        uses: ./pre-run/.github/actions/prepare-runner-cache
+      - name: Prepare Workspace for Checkout (Mock)
+        run: echo "Mocking prepare cache"
 
       - name: Checkout
         uses: actions/checkout@v4
@@ -346,11 +331,8 @@ jobs:
       - name: Set Up Depot Tools (Mock)
         run: echo "Mocking depot tools"
 
-      - name: Retry Depot Tools Set Up
-        if: steps.setup-depot-tools.outcome != 'success'
-        uses: ./cobalt/src/.github/actions/depot_tools
-        with:
-          use_cache: false
+      - name: Retry Depot Tools Set Up (Mock)
+        run: echo "Mocking retry"
 
       - name: Build Cobalt (Mock)
         run: echo "Mocking build" && mkdir -p out/${{ matrix.platform }}_${{ matrix.config }} && echo '["cobalt:gn_all"]' > out/${{ matrix.platform }}_${{ matrix.config }}/test_targets.json
@@ -360,9 +342,8 @@ jobs:
       - name: Upload Test Artifacts (Mock)
         run: echo "Mocking upload"
 
-      - name: Run API Leak Detector
-        uses: ./cobalt/src/.github/actions/api_leak_detector
-        if: inputs.run_api_leak_detector
+      - name: Run API Leak Detector (Mock)
+        run: echo "Mocking leak detector"
 
   on-device-test:
     needs: [initialize, build]
@@ -389,9 +370,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: ci-essentials-${{ inputs.platform }}
-      - name: Parse Test Target JSON
+      - name: Parse Test Target JSON (Mock)
         id: test-target-json
-        uses: ./.github/actions/test_targets_json
+        run: echo 'test_targets_json=["cobalt:gn_all"]' >> $GITHUB_OUTPUT && echo "test_targets_count=1" >> $GITHUB_OUTPUT
       - name: Run On-Device Tests (Mock)
         run: echo "Mocking on device tests" && mkdir -p results && cp results/fake_unittests_result.xml results/unittest_result.xml
     outputs:
@@ -420,12 +401,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Run E2E Tests
-        uses: ./.github/actions/e2e_tests
-        with:
-          e2e_test_targets: '${{ needs.initialize.outputs.e2e_test_targets }}'
-          test_attempts: '${{ needs.initialize.outputs.e2e_test_attempts }}'
-          test_dimensions: '${{ needs.initialize.outputs.test_dimensions }}'
+      - name: Run E2E Tests (Mock)
+        run: echo "Mocking E2E tests"
 
   on-host-test:
     needs: [initialize, docker-unittest-image, build]
@@ -450,9 +427,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: ci-essentials-${{ inputs.platform }}
-      - name: Parse Test Target JSON
+      - name: Parse Test Target JSON (Mock)
         id: test-target-json
-        uses: ./.github/actions/test_targets_json
+        run: echo 'test_targets_json=["cobalt:gn_all"]' >> $GITHUB_OUTPUT && echo "test_targets_count=1" >> $GITHUB_OUTPUT
       - name: Run On-Host Tests (Mock)
         run: echo "Mocking on host tests" && mkdir -p results && cp results/fake_unittests_result.xml results/unittest_result.xml
     outputs:
@@ -487,8 +464,8 @@ jobs:
         with:
           path: pre-run
           name: ci-essentials-${{ inputs.platform }}
-      - name: Prepare Workspace for Checkout
-        uses: ./pre-run/.github/actions/prepare-runner-cache
+      - name: Prepare Workspace for Checkout (Mock)
+        run: echo "Mocking prepare cache"
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -496,19 +473,10 @@ jobs:
           clean: false
       - name: Set Up Depot Tools (Mock)
         run: echo "Mocking depot tools"
-        with:
-          run_sync: false
-      - name: Retry Depot Tools Set Up
-        if: steps.setup-depot-tools.outcome != 'success'
-        uses: ./cobalt/src/.github/actions/depot_tools
-        with:
-          run_sync: false
-          use_cache: false
-      - name: Run Web Tests
-        uses: ./cobalt/src/.github/actions/web_tests
-        with:
-          test_artifacts_key: ${{ env.TEST_ARTIFACTS_KEY }}
-          test_results_key: Blink Web Test Results ${{ github.workflow }}
+      - name: Retry Depot Tools Set Up (Mock)
+        run: echo "Mocking retry"
+      - name: Run Web Tests (Mock)
+        run: echo "Mocking web tests"
 
   test-results:
     needs: [initialize, build, on-device-test, on-host-test]
