--- a/.github/actions/docker/action.yaml
+++ b/.github/actions/docker/action.yaml
@@ -42,18 +42,23 @@ runs:
       shell: bash
 
     - name: Login to GAR
+      continue-on-error: true
       run: |
         # Login to GAR
         TOKEN_ENDPOINT="http://metadata.google.internal/computeMetadata/v1/instance/service-accounts/default/token"
-        ACCESS_TOKEN=$(curl -H 'Metadata-Flavor: Google' ${TOKEN_ENDPOINT} | jq -r .access_token)
+        if curl -s --connect-timeout 2 ${TOKEN_ENDPOINT} > /dev/null; then
+          ACCESS_TOKEN=$(curl -H 'Metadata-Flavor: Google' ${TOKEN_ENDPOINT} | jq -r .access_token)
 
-        # Login to GAR to be able to push images created by fork based PR workflows.
-        if [[ "${{ inputs.is_pr }}" == "true" ]]; then
-          printf ${ACCESS_TOKEN} | docker login -u oauth2accesstoken --password-stdin https://us-central1-docker.pkg.dev
+          # Login to GAR to be able to push images created by fork based PR workflows.
+          if [[ "${{ inputs.is_pr }}" == "true" ]]; then
+            printf ${ACCESS_TOKEN} | docker login -u oauth2accesstoken --password-stdin https://us-central1-docker.pkg.dev
+          fi
+
+          # Login to Marketplace GAR to be able to pull base images.
+          printf ${ACCESS_TOKEN} | docker login -u oauth2accesstoken --password-stdin https://marketplace.gcr.io
+        else
+          echo "Skipping GAR login as metadata endpoint is not reachable."
         fi
-
-        # Login to Marketplace GAR to be able to pull base images.
-        printf ${ACCESS_TOKEN} | docker login -u oauth2accesstoken --password-stdin https://marketplace.gcr.io
       shell: bash
 
     - name: Login to GitHub Docker Registry
