--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -379,6 +379,8 @@ jobs:
     env:
       TEST_RESULTS_KEY: ${{ matrix.platform }}_${{ matrix.name }}_test_results
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Restore CI Essentials
         uses: actions/download-artifact@v4
         with:
@@ -432,10 +434,8 @@ jobs:
         shard: ${{ fromJson(needs.initialize.outputs.gtest_shards) }}
     container: ${{ needs.docker-unittest-image.outputs.docker_tag }}
     env:
-      TMPDIR: /__w/_temp
-      TEST_ARTIFACTS_KEY: ${{ matrix.platform }}_${{ matrix.name }}_test_artifacts
-      TEST_RESULTS_KEY: ${{ matrix.platform }}_${{ matrix.name }}_test_results-${{ matrix.shard }}
-    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Restore CI Essentials
         uses: actions/download-artifact@v4
         with:
