--- a/.github/actions/on_device_tests/action.yaml
+++ b/.github/actions/on_device_tests/action.yaml
@@ -40,9 +40,24 @@ runs:
       run: |
         echo "PROJECT_NAME=$(gcloud config get-value project)" >> $GITHUB_ENV
       shell: bash
+    - name: Filter Test Targets
+      id: filter-targets
+      uses: ./.github/actions/filter_test_targets
+      with:
+        test_targets: ${{ inputs.test_targets_json }}
+        test_results_key: ${{ inputs.test_results_key }}
+        mode: device
+    - name: Restore Previous Results
+      if: github.run_attempt > 1
+      run: |
+        mkdir -p results
+        if [ -d "previous_results" ]; then
+          cp -rn previous_results/* results/ || true
+        fi
+      shell: bash
     - name: Run Tests on ${{ matrix.platform }} Platform
       env:
-        TEST_TARGETS_JSON: ${{ inputs.test_targets_json }}
+        TEST_TARGETS_JSON: ${{ steps.filter-targets.outputs.filtered_test_targets }}
         GCS_ARTIFACTS_PATH: /bigstore/${{ env.PROJECT_NAME }}-test-artifacts/${{ github.workflow }}/${{ github.run_number }}/${{ matrix.platform }}
         GITHUB_SHA: ${{ github.sha }}
         GITHUB_TOKEN: ${{ github.token }}
@@ -70,7 +85,7 @@ runs:
           trigger \
           --test_type ${TEST_TYPE} \
           --device_family '${{ inputs.test_device_family }}' \
-          --targets '${{ inputs.test_targets_json }}' \
+          --targets '${{ steps.filter-targets.outputs.filtered_test_targets }}' \
           --filter_json_dir "${GITHUB_WORKSPACE}/cobalt/testing/filters/${{ matrix.platform }}" \
           --label chrobalt_on_device_test \
           --label github_${GITHUB_PR_NUMBER:-postsubmit} \
@@ -101,7 +116,7 @@ runs:
     - name: Download ${{ matrix.platform }} Test Results from GCS
       if: always()
       env:
-        TEST_TARGETS_JSON: ${{ inputs.test_targets_json }}
+        TEST_TARGETS_JSON: ${{ steps.filter-targets.outputs.filtered_test_targets }}
       run: |
         set -uxe
         shopt -s globstar nullglob
