--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -384,15 +384,37 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Restore CI Essentials
-        run: |
-          test_targets_json=$(cat ${GITHUB_WORKSPACE}/.github/config/${{ matrix.platform }}.json | jq -cr ".targets")
-          echo "test_targets_json=${test_targets_json}" >> $GITHUB_OUTPUT
+        uses: actions/download-artifact@v4
+        with:
+          name: ci-essentials-${{ inputs.platform }}
+
+      - name: Download Previous Results (Attempt > 1)
+        if: github.run_attempt > 1
+        uses: actions/download-artifact@v4
+        with:
+          pattern: ${{ env.TEST_RESULTS_KEY }}*
+          path: previous_results
+
+      - name: Parse Test Target JSON (Mock)
+        id: test-target-json
         run: |
           test_targets_json=$(cat ${GITHUB_WORKSPACE}/cobalt/build/testing/targets/${{ matrix.platform }}/test_targets.json | jq -cr ".test_targets")
+
+          if [ "${{ github.run_attempt }}" -gt "1" ]; then
+             echo "Filtering targets..."
+             mkdir -p previous_results_extracted
+             for zip in previous_results/*.zip; do
+               unzip -o "$zip" -d previous_results_extracted
+             done
+
+             filtered_targets=$(python3 cobalt/tools/filter_test_targets.py                --targets "${test_targets_json}"                --results-dir previous_results_extracted                --mode device)
+             echo "Filtered Targets: $filtered_targets"
+             test_targets_json=$filtered_targets
+          fi
+
           echo "test_targets_json=${test_targets_json}" >> $GITHUB_OUTPUT
           echo "test_targets_count=$(echo "${test_targets_json}" | jq -cr "length")" >> $GITHUB_OUTPUT
-        id: test-target-json
-        run: echo 'test_targets_json=["cobalt:gn_all"]' >> $GITHUB_OUTPUT && echo "test_targets_count=1" >> $GITHUB_OUTPUT
+
       - name: Run On-Device Tests (Mock)
         run: |
           echo "Mocking on device tests"
@@ -425,9 +447,15 @@ jobs:
 
             exit 1
           else
-            echo "Attempt > 1 - Passing All"
-            # Pass all
-            for target in base_perftests base_unittests cobalt_unittests; do
+            echo "Attempt > 1 - Passing Filtered"
+            filtered_json='${{ steps.test-target-json.outputs.test_targets_json }}'
+            echo "Running targets: $filtered_json"
+
+            # Extract target names
+            targets=$(echo $filtered_json | jq -r '.[]')
+
+            for target_path in $targets; do
+                target=${target_path##*:}
                 cat <<EOF > results/${target}_testoutput.xml
                 <testsuites failures="0" errors="0">
                   <testsuite name="${target}" failures="0" tests="1">
@@ -440,7 +468,7 @@ jobs:
     outputs:
       test_targets_json: ${{ steps.test-target-json.outputs.test_targets_json }}
 
-  e2e-test:
+    e2e-test:
     needs: [initialize, build]
     # Run E2E tests when on_device label is applied to PR.
     # Also, run E2E tests on push and schedule if not explicitly disabled via repo vars.
@@ -490,6 +518,19 @@ jobs:
           echo "test_targets_json=${test_targets_json}" >> $GITHUB_OUTPUT
         run: |
           test_targets_json=$(cat ${GITHUB_WORKSPACE}/cobalt/build/testing/targets/${{ matrix.platform }}/test_targets.json | jq -cr ".test_targets")
+          if [ "${{ github.run_attempt }}" -gt "1" ]; then
+             echo "Filtering targets..."
+             # Extract previous results
+             mkdir -p previous_results_extracted
+             for zip in previous_results/*.zip; do
+               unzip -o "$zip" -d previous_results_extracted
+             done
+
+             filtered_targets=$(python3 cobalt/tools/filter_test_targets.py                --targets "${test_targets_json}"                --results-dir previous_results_extracted                --mode device)
+             echo "Filtered Targets: $filtered_targets"
+             test_targets_json=$filtered_targets
+          fi
+
           echo "test_targets_json=${test_targets_json}" >> $GITHUB_OUTPUT
           echo "test_targets_count=$(echo "${test_targets_json}" | jq -cr "length")" >> $GITHUB_OUTPUT
         with:
