Disable triggers for all main workflows

--- a/.github/workflows/android.yaml
+++ b/.github/workflows/android.yaml
@@ -1,17 +1,17 @@
 name: android
 
 on:
-  pull_request:
-    types: [opened, reopened, synchronize, labeled, ready_for_review]
-    branches:
-      - main
-      - experimental/*
-      - feature/*
-  push:
-    branches:
-      - main
-      - experimental/*
-      - feature/*
+  # pull_request:
+  #   types: [opened, reopened, synchronize, labeled, ready_for_review]
+  #   branches:
+  #     - main
+  #     - experimental/*
+  #     - feature/*
+  # push:
+  #   branches:
+  #     - main
+  #     - experimental/*
+  #     - feature/*
   workflow_dispatch:
     inputs:
       nightly:
