--- a/.github/workflows/linux.yaml
+++ b/.github/workflows/linux.yaml
@@ -1,17 +1,17 @@
 name: linux
 
 on:
-  pull_request:
-    types: [opened, reopened, synchronize, labeled]
-    branches:
-      - main
-      - experimental/*
-      - feature/*
-  push:
-    branches:
-      - main
-      - experimental/*
-      - feature/*
+  # pull_request:
+  #   types: [opened, reopened, synchronize, labeled]
+  #   branches:
+  #     - main
+  #     - experimental/*
+  #     - feature/*
+  # push:
+  #   branches:
+  #     - main
+  #     - experimental/*
+  #     - feature/*
   workflow_dispatch:
     inputs:
       nightly:
